--- a/src/wp-content/themes/zippy-elementor-child/assets/sass/app.scss
+++ b/src/wp-content/themes/zippy-elementor-child/assets/sass/app.scss
@@ -1,3 +1,10 @@
+@import "home";
+@import "customize";
+@import "ourproject";
+@import "shop";
+@import "cart";
+@import "checkout";
+@import "header";
 // Container form
 .form-wrapper {
   .form-heading-icon {
