--- a/src/wp-content/themes/zippy-elementor-child/assets/sass/_home.scss
+++ b/src/wp-content/themes/zippy-elementor-child/assets/sass/_home.scss
@@ -12,13 +12,16 @@
       .swiper-slide-contents {
         margin-top: 100px;
         padding-left: 10px;
+        width: 30%;
         @include tablet {
           margin-top: 100px;
           padding-left: 10px;
+          width: 100%;
         }
         @include desktop {
           margin-top: 0px;
           padding-left: 0px;
+          width: 100%;       
         }
       }
     }
